refactor: regenerate tsoa files
