# apps/interpreter/spec/swagger.json
@@ -31,7 +31,7 @@
 				"type": "object",
 				"additionalProperties": false
 			},
-			"Pick_MetaSolverStrategyInput.Exclude_keyofMetaSolverStrategyInput.problemTypeId__": {
+			"MetaSolverStrategyInput": {
 				"properties": {
 					"code": {
 						"type": "string"
@@ -45,11 +45,7 @@
 					"name"
 				],
 				"type": "object",
-				"description": "From T, pick a set of properties whose keys are in the union K"
-			},
-			"Omit_MetaSolverStrategyInput.problemTypeId_": {
-				"$ref": "#/components/schemas/Pick_MetaSolverStrategyInput.Exclude_keyofMetaSolverStrategyInput.problemTypeId__",
-				"description": "Construct a type with the properties of T except for those in type K."
+				"additionalProperties": false
 			},
 			"MetaSolverStrategyResponse": {
 				"properties": {
@@ -62,22 +58,6 @@
 				},
 				"required": [
 					"id",
-					"name"
-				],
-				"type": "object",
-				"additionalProperties": false
-			},
-			"MetaSolverStrategyInput": {
-				"properties": {
-					"code": {
-						"type": "string"
-					},
-					"name": {
-						"type": "string"
-					}
-				},
-				"required": [
-					"code",
 					"name"
 				],
 				"type": "object",
@@ -138,7 +118,7 @@
 					"content": {
 						"application/json": {
 							"schema": {
-								"$ref": "#/components/schemas/Omit_MetaSolverStrategyInput.problemTypeId_"
+								"$ref": "#/components/schemas/MetaSolverStrategyInput"
 							}
 						}
 					}
